# nixpkg-coding-agent-session-search

./: README.md  flake.nix
fast_cmaes/: .env.example  .gitignore  Cargo.toml  README.md  UPGRADE_LOG.md  pyproject.toml
fast_cmaes/include/: fastcma.h  fastcma.hpp
fast_cmaes/python/fastcma_baseline/: __init__.py  naive_cma.py
franken_agent_detection/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
franken_agent_detection/src/: lib.rs  types.rs
franken_agent_detection/src/connectors/: aider.rs  amp.rs  chatgpt.rs  claude_code.rs  clawdbot.rs  cline.rs  codex.rs  copilot.rs  copilot_cli.rs  crush.rs  cursor.rs  factory.rs  gemini.rs  goose.rs  kimi.rs  mod.rs  openclaw.rs  opencode.rs  path_trie.rs  pi_agent.rs  qwen.rs  token_extraction.rs  utils.rs  vibe.rs
frankensqlite/: Cargo.toml
nix/: package-manifest.json  package.nix
upstream/: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
upstream/.ntm/summaries/: coding_agent_session_search-20260407-115237.json
upstream/benches/: bench_utils.rs  index_perf.rs  search_latency_e2e.rs  search_perf.rs
upstream/src/: bookmarks.rs  lib.rs
upstream/src/analytics/: validate.rs
upstream/src/indexer/: mod.rs  refresh_ledger.rs
upstream/src/pages/: archive_config.rs  deploy_cloudflare.rs  deploy_github.rs  mod.rs  profiles.rs  verify.rs
upstream/src/pages_assets/: coi-detector.js  crypto_worker.js  index.html  search.js  settings.js  sw.js  viewer.js
upstream/src/search/: asset_state.rs  canonicalize.rs  mod.rs  query.rs  tantivy.rs
upstream/src/sources/: config.rs  interactive.rs  (+2 more)
(+5 files in other folders)
