[package]
name = "fastcma"
version = "0.1.4"
edition = "2021"

[lib]
name = "fastcma"
crate-type = ["rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
rayon = "1.10"
nalgebra = "0.31"
nalgebra-lapack = { version = "0.22", optional = true }
numpy = { version = "0.22", optional = true }

[features]
default = ["eigen_rust", "python"]
eigen_rust = []
eigen_lapack = ["nalgebra-lapack"]
numpy_support = ["numpy"]
python = ["dep:pyo3"]
test_utils = []

[dev-dependencies]
fastcma = { path = ".", features = ["test_utils"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
